--- a/datasets/nfts/notebooks/transfers_count-Copy1.ipynb
+++ b/datasets/nfts/notebooks/transfers_count-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "Text(0.5, 1.0, 'NFT transfers value over time')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "0xcDA72070E455bb31C7690a170224Ce43623d0B6f   76645.0     36116.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "0x327305A797d92a39cEe1a225D7E2A1cC42B1a8fA       NaN    106620.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
        "0xcDA72070E455bb31C7690a170224Ce43623d0B6f   76645.0     36116.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
        "0xb1690C08E213a35Ed9bAb7B318DE14420FB57d8C   14124.0     23128.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,49 +597,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#transfers not transactions\n",
-    "transactions_per_nft = transfers[\"nft_address\"].groupby(transfers[\"nft_address\"]).size()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0     0.000000e+00\n",
-       "1     0.000000e+00\n",
-       "2     0.000000e+00\n",
-       "3     0.000000e+00\n",
-       "4     0.000000e+00\n",
-       "5     6.180000e+18\n",
-       "6     0.000000e+00\n",
-       "7     0.000000e+00\n",
-       "8     3.000000e+16\n",
-       "9     0.000000e+00\n",
-       "10    0.000000e+00\n",
-       "11    0.000000e+00\n",
-       "12    0.000000e+00\n",
-       "13    0.000000e+00\n",
-       "14    0.000000e+00\n",
-       "Name: transaction_value, dtype: float64"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'transfers' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-b7054e15b5df>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtransfers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'transfers' is not defined"
+     ]
     }
    ],
    "source": [
-    "transfers[\"transaction_value\"] = pd.to_numeric(transfers[\"transaction_value\"])\n",
-    "transfers[\"transaction_value\"] = transfers[\"transaction_value\"].fillna(0)\n",
-    "transfers[\"transaction_value\"].head(15)"
+    "transfers"
    ]
   },
   {
@@ -648,74 +622,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_value_per_nft = transfers[\"nft_address\"].groupby(transfers[\"transaction_value\"]).sum()\n",
-    "total_value_per_nft.head(4)"
+    "transf"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "most_popular_nfts = transactions_per_nft.sort_values(ascending=False).head(8)\n",
-    "most_valuable_nfts = total_value_per_nft.sort_values(ascending=False).head(8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#get frame with values over time\n",
-    "num_df = pd.DataFrame()\n",
-    "#cast to numeric\n",
-    "num_df = (transfers[[\"transaction_value\", \"timestamp\"]].apply(pd.to_numeric, errors='coerce'))\n",
-    "#add nft_address column to it\n",
-    "num_df[\"nft_address\"]=transfers[\"nft_address\"]\n",
-    "#filter out only ones that are in most_popular_nft variable\n",
-    "num_df = num_df[num_df.nft_address.isin(list(most_valuable_nfts.index))]\n",
-    "#convert timestamp in to date time\n",
-    "num_df[\"timestamp\"] = pd.to_datetime(num_df.timestamp, unit='s', errors='coerce')\n",
-    "#set index as timestamp\n",
-    "num_df = num_df.set_index(\"timestamp\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#group timestamps by day, create column per each nft_address, aggregate transaction value by count and sum\n",
-    "new_df = num_df.groupby([pd.Grouper(freq='d'), 'nft_address'])['transaction_value'].agg(transaction_value=\"sum\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plt.figure(figsize=(24, 12))\n",
-    "# new_df.unstack()\n",
-    "# ax = sns.lineplot(data=new_df, x='timestamp', y='transaction_value', hue='nft_address',)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
