Updated title on paper

--- a/datasets/nfts/papers/ethereum-nfts.tex
+++ b/datasets/nfts/papers/ethereum-nfts.tex
@@ -9,7 +9,7 @@ frame=single,
 breaklines=true
 }
 
-\title{On the Ethereum NFT market}
+\title{An analysis of 7,020,950 NFT transactions on the Ethereum blockchain}
 
 \author{
     The Moonstream team\\
