Ethereum NFTs paper: Updated table text

--- a/datasets/nfts/papers/ethereum-nfts.tex
+++ b/datasets/nfts/papers/ethereum-nfts.tex
@@ -314,11 +314,11 @@ Table \ref{tokens} shows a sample of token collections at varying levels of owne
 \href{https://ens.domains/}{Ethereum Name Service} & 13.864019 & High utility & 145,303 & 64,717 \\
 \href{https://rarible.com/}{Rarible Governance Token} & 13.831032 & High utility & 86,375 & 42,644 \\
 \href{https://uniswap.org/}{Uniswap v3 Position NFT} & 13.742724 & High utility & 132,087 &   38,790 \\
-\href{https://www.producthunt.com/posts/enigma-project}{The Enigma Project} & 6.011324 & Low utility & 381 & 108 \\
-\href{https://rtfkt.com/spacedrip}{The RTFKT Capsule Space Drop} & 6.010405 & Low utility & 112 & 78 \\
+\href{https://www.producthunt.com/posts/enigma-project}{The Enigma Project} & 6.011324 & Highly speculative & 381 & 108 \\
+\href{https://rtfkt.com/spacedrip}{The RTFKT Capsule Space Drip} & 6.010405 & Highly speculative & 112 & 78 \\
 \href{https://twitter.com/DommiesNFT}{Dommies} & 6.009679 & Highly speculative & 1,034 & 236 \\
-\href{https://coinclarity.com/dapp/worldcuptoken/}{World Cup Token} & 2.004886 & Extremely low utility & 11 & 5 \\
-\href{https://www.eminem.com/news/shadycon-x-nifty-gateway}{SHADYCON (associated with Eminem)} & 2.002227 & Extremely low utility & 101 & 23 \\
+\href{https://coinclarity.com/dapp/worldcuptoken/}{World Cup Token} & 2.004886 & Stalled & 11 & 5 \\
+\href{https://www.eminem.com/news/shadycon-x-nifty-gateway}{SHADYCON (associated with Eminem)} & 2.002227 & Stalled & 101 & 23 \\
 \hline
 \end{tabular}}
 \caption{A sample of tokens at varying levels of ownership spread}\label{tokens}
