--- a/datasets/nfts/papers/ethereum-nfts.tex
+++ b/datasets/nfts/papers/ethereum-nfts.tex
@@ -59,7 +59,7 @@ The recent boom in the NFT market \cite{reuters-nft-surge} has led to an increas
 
 \section{The Ethereum NFTs Dataset}
 
-The majority of recent NFT action has been centered around the Ethereum blockchain. This made Ethereum the natural starting point for a series of analyses, of which this is paper represents the first.
+The majority of recent NFT action has been centered around the Ethereum blockchain. This made Ethereum the natural starting point for a series of analyses, of which this paper represents the first.
 
 This section introduces the Ethereum NFTs dataset \cite{ethereum-nfts}. It describes the structure of NFT data on the Ethereum blockchain, elaborates on our methods of data collection, and articulates the structure of the dataset.
 
